--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "start": "parcel",
     "build": "parcel build --public-url ./ --dist-dir public"
   },
-  "author": "slightlyfunctional",
-  "dependencies": {
-    "@fontsource/karla": "^4.5.10"
-  },
+  "author": "alexl8819",
   "devDependencies": {
+    "@fontsource/karla": "^5.0.12",
     "parcel": "^2.8.2",
     "tailwindcss": "^3.2.4"
   },
