--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   "source": "src/index.html",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build --public-url ./ --dist-dir public"
+    "build": "parcel build --public-url ./ --dist-dir public",
+    "lint": "eslint ./src/*.html --max-warnings=0"
   },
   "author": "alexl8819",
   "devDependencies": {
+    "@angular-eslint/template-parser": "^16.1.2",
     "@fontsource/karla": "^5.0.12",
+    "eslint": "^8.49.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "parcel": "^2.8.2",
     "tailwindcss": "^3.2.4"
   },
